--- a/config/demo/mall-demo-prod.yaml
+++ b/config/demo/mall-demo-prod.yaml
@@ -8,6 +8,6 @@ logging:
     path: /var/logs
   level:
     root: info
-    com.macro.mall: info
+    com.mole.mall: info
 logstash:
   host: logstash
