--- a/config/gateway/mall-gateway-dev.yaml
+++ b/config/gateway/mall-gateway-dev.yaml
@@ -4,11 +4,11 @@ spring:
       host: localhost # Redis服务器地址
       database: 0 # Redis数据库索引（默认为0）
       port: 6379 # Redis服务器连接端口
-      password: # Redis服务器连接密码（默认为空）
+      password: 114514 # Redis服务器连接密码（默认为空）
       timeout: 3000ms # 连接超时时间（毫秒）
 logging:
   level:
     root: info
-    com.macro.mall: debug
+    com.mole.mall: debug
 logstash:
   host: localhost
