--- a/config/gateway/mall-gateway-prod.yaml
+++ b/config/gateway/mall-gateway-prod.yaml
@@ -10,6 +10,6 @@ logging:
     path: /var/logs
   level:
     root: info
-    com.macro.mall: info
+    com.mole.mall: info
 logstash:
   host: logstash
