--- a/config/portal/mall-portal-dev.yaml
+++ b/config/portal/mall-portal-dev.yaml
@@ -12,7 +12,7 @@ spring:
       host: localhost # Redis服务器地址
       database: 0 # Redis数据库索引（默认为0）
       port: 6379 # Redis服务器连接端口
-      password: # Redis服务器连接密码（默认为空）
+      password: 114514 # Redis服务器连接密码（默认为空）
   rabbitmq:
     host: localhost
     port: 5672
@@ -23,7 +23,7 @@ spring:
 logging:
   level:
     root: info
-    com.macro.mall: debug
+    com.mole.mall: debug
 logstash:
   host: localhost
 alipay:
