--- a/config/search/mall-search-prod.yaml
+++ b/config/search/mall-search-prod.yaml
@@ -14,6 +14,6 @@ logging:
     path: /var/logs
   level:
     root: info
-    com.macro.mall: info
+    com.mole.mall: info
 logstash:
   host: logstash
