chore: update spring cloud and remove duplicate files

--- a/mall-demo/pom.xml
+++ b/mall-demo/pom.xml
@@ -12,6 +12,42 @@
 
     <artifactId>mall-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
+    <dependencies>
+        <!-- 依赖于mall-mbg模块 -->
+        <dependency>
+            <groupId>com.mole.mall</groupId>
+            <artifactId>mall-mbg</artifactId>
+        </dependency>
+        <!-- Spring Cloud OpenFeign启动器，用于声明式HTTP客户端 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <!-- Alibaba Nacos服务发现启动器 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <!-- Alibaba Nacos配置启动器 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+        <!-- Spring Boot Admin客户端启动器，用于注册到Spring Boot Admin服务器 -->
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+        </dependency>
+    </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
