--- a/doc/docker/docker-compose-env.yml
+++ b/doc/docker/docker-compose-env.yml
@@ -143,12 +143,13 @@ services:
           memory: 512M
 
   nacos-registry:
-    image: nacos/nacos-server:v2.4.2
-    container_name: nacos-registry
+    image: nacos/nacos-server:v2.4.2.1
+    container_name: nacos
     environment:
       - "MODE=standalone"
     ports:
       - "8848:8848"
+      - "9848:9848"
     deploy:
       resources:
         limits:
